Fix spacing

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -9,7 +9,7 @@
 
   min-height: 50rem;
   // margin: 3rem 0;
-  padding: 1.5rem 2rem 2.5rem;
+  padding: 2rem 2rem 3rem;
 
   font-size: 1.2rem;
   background-color: $mainBodyBackgroundBlack;
