--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -6,8 +6,8 @@
   justify-content: center;
   align-items: center;
 
-  min-height: 45rem;
-  padding: 0 3rem;
+  // min-height: 5rem;
+  padding: 2rem 3rem 3rem;
 
   font-size: 1.2rem;
 }
@@ -26,6 +26,7 @@
 
   .contactBlurb {
     margin: inherit clamp(2rem, 3vw, 4rem);
+    font-size: 1.5rem;
   }
 }
 
