--- a/src/components/Experiences/styles.module.scss
+++ b/src/components/Experiences/styles.module.scss
@@ -7,7 +7,7 @@
   // justify-content: center;
   align-items: center;
 
-  padding: 1.5rem 0 2.5rem;
+  padding: 2rem 0 3rem;
   min-height: 30rem;
 
   background-color: $mainBodyBackgroundBlack;
