--- a/src/components/TechStack/styles.module.scss
+++ b/src/components/TechStack/styles.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
 
   margin: 3rem 0;
-  padding: 1.5rem 0 2.5rem;
+  padding: 2rem 0 3rem;
 
   background: $mainBodyBackgroundBlack;
   box-shadow: 0 0 1rem 0 $mainTextColorBlack;
