--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -175,11 +175,11 @@ button:focus-visible {
   }
 }
 
-@media only screen and (min-width: $desktop-min) {
-  h1, h2 {
-    font-size: 3rem;
-  }
-}
+// @media only screen and (min-width: $desktop-min) {
+//   h1, h2 {
+//     font-size: 3rem;
+//   }
+// }
 
 // @media (prefers-color-scheme: light) {
 //   :root {
